--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,57 @@
+anyio==4.6.2.post1
 asgiref==3.8.1
-certifi==2024.7.4
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.8.30
 charset-normalizer==3.3.2
-cloudinary==1.40.0
-dj-database-url==2.2.0
-Django==5.0.7
-django-cloudinary-storage==0.3.0
+click==8.1.8
+cloudinary==1.41.0
+contourpy==1.3.1
+cycler==0.12.1
+Django==5.1.1
 django-cors-headers==4.4.0
-django-filter==24.3
+django-debug-toolbar==4.4.6
+django-environ==0.11.2
+django-extensions==3.2.3
+django_paystack==1.0.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
-gunicorn==20.1.0
-idna==3.7
-packaging==24.1
-pillow==10.4.0
-psycopg2-binary==2.9.9
-PyJWT==2.8.0
-python-dotenv==1.0.1
-pytz==2024.1
+Flask==3.1.0
+flask-cors==5.0.1
+fonttools==4.55.3
+FreeSimpleGUI==5.1.1
+google-api-core==2.19.2
+google-api-python-client==2.145.0
+google-auth==2.34.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.65.0
+h11==0.14.0
+httpcore==1.0.6
+httplib2==0.22.0
+httpx==0.27.2
+idna==3.9
+itsdangerous==2.2.0
+Jinja2==3.1.5
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+numpy==2.2.1
+packaging==24.2
+pillow==11.1.0
+proto-plus==1.24.0
+protobuf==5.28.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyJWT==2.9.0
+pyparsing==3.1.4
+pypaystack2==2.0.3
+python-dateutil==2.9.0.post0
+python-decouple==3.8
 requests==2.32.3
+rsa==4.9
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.1
-typing_extensions==4.12.2
-urllib3==2.2.2
-whitenoise==6.7.0
+uritemplate==4.1.1
+urllib3==2.2.3
+Werkzeug==3.1.3
