--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ google-api-python-client==2.145.0
 google-auth==2.34.0
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.65.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httplib2==0.22.0
