--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.8
 cloudinary==1.41.0
 contourpy==1.3.1
 cycler==0.12.1
+dj-database-url==2.3.0
 Django==5.1.1
 django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
@@ -53,6 +54,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
+typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.3
 Werkzeug==3.1.3
