--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ pyparsing==3.1.4
 pypaystack2==2.0.3
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.0.1
 requests==2.32.3
 rsa==4.9
 six==1.16.0
