--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ contourpy==1.3.1
 cycler==0.12.1
 dj-database-url==2.3.0
 Django==5.1.1
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
