--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pillow==10.4.0
 psycopg==3.2.5
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-decouple==3.8
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.32.3
