--- a/.env.i-wan-wok
+++ b/.env.i-wan-wok
@@ -1,1 +1,3 @@
-
+FLUTTERWAVE_PUBLIC_KEY=FLWPUBK_TEST-6941e4117be9902646d54ec0509e804c-X
+FLUTTERWAVE_SECRET_KEY=FLWSECK_TEST-3cf8370b8bcc81c440454bb8184a0fdf-X
+FLUTTERWAVE_REDIRECT_URL=https://react-django-job-portal-frontend.vercel.app/payment-confirmation/
