--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==5.0.7
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.4.0
 django-filter==24.3
+django-rest-passwordreset==1.5.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 gunicorn==20.1.0
